Database Process crashes after loading html5test.com https://bugs.webkit.org/show_bug.cgi?id=132938 <rdar://problem/16241419>

Reviewed by Ryosuke Niwa.

* DatabaseProcess/IndexedDB/DatabaseProcessIDBConnection.cpp:
(WebKit::DatabaseProcessIDBConnection::disconnectedFromWebProcess): Expand comment
about the null check.
(WebKit::DatabaseProcessIDBConnection::deleteDatabase): Call disconnectedFromWebProcess
to pick up its null check and to avoid duplicating code.


Canonical link: https://commits.webkit.org/150996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168889 268f45cc-cd09-0410-ab3c-d52691b4dbfc